remove profile for drone.io